--- a/public/manifeste.json
+++ b/public/manifeste.json
@@ -8,7 +8,7 @@
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "/icon.ico",
+      "src": "/favicon.ico",
       "sizes": "192x192",
       "type": "image/ico"
     }
