--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.3",
+    "@vercel/postgres": "^0.7.2",
     "bootstrap": "^5.3.2",
     "next": "^14.1.0",
     "next-auth": "^4.24.5",
@@ -20,7 +21,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
+    "eslint": "^8.56.0",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "5.3.3"
   }
 }
